chronograf/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: chronograf
  namespace: tick
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: chronograf
    spec:
      containers:
      - image: gcr.io/influx-perf-testing/chronograf:latest
        imagePullPolicy: Always
        name: chronograf
        ports:
        - containerPort: 8888
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 10Mi
        volumeMounts:
        - name: chronograf
          mountPath: /var/lib/chronograf
      volumes:
      - name: chronograf
        gcePersistentDisk:
          pdName: chronograf
          fsType: ext4
