chronograf/ingress-http.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chronograf
  namespace: tick
  annotations:
    # kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
# spec:
#   # tls:
#   # - hosts:
#   #   - jackzampolin.com
#   #   - www.jackzampolin.com
#   #   secretName: jackserver-tls
#   rules:
#   - host: jackzampolin.com
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: jackserver
#           servicePort: 80
#   - host: www.jackzampolin.com
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: jackserver
#           servicePort: 80
